# connect-processors-toolkit

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
connect/processors_toolkit/: __init__.py  application.py  assets.py  helpers.py  requests.py  tier_configurations.py
connect/processors_toolkit/api/: mixins.py
connect/processors_toolkit/application/: __init__.py  container.py  contracts.py  dispatcher.py  router.py
connect/processors_toolkit/configuration/: mixins.py
connect/processors_toolkit/dependency_injection/: container.py  contracts.py  exceptions.py
connect/processors_toolkit/logger/: __init__.py  adapter.py  mixins.py
connect/processors_toolkit/offline/: __init__.py  contracts.py
connect/processors_toolkit/requests/: __init__.py  assets.py  helpers.py  tier_configurations.py
connect/processors_toolkit/router/: __init__.py  (+2 more)
connect/toolkit/: __init__.py  assets.py  exceptions.py  requests.py  tier_configurations.py
tests/: conftest.py  test_api_mixin_with_asset_helper.py  test_api_mixin_with_conversation_helper.py  test_api_mixin_with_product_helper.py  test_api_mixin_with_tier_configuration_helper.py  test_application.py  test_application_dispatcher.py  test_assets.py  test_configuration.py  test_logger.py  test_mixin_with_asset_helper.py  test_mixin_with_product_helper.py  test_offline.py  test_request.py  test_router.py  test_shared.py  test_tier_configurations.py  test_transactions.py  tier_configuration_request.json
tests/api/: test_mixin_with_asset_helper.py  test_mixin_with_helpdesk_helper.py  test_mixin_with_product_helper.py  test_mixin_with_tier_configuration_helper.py
tests/application/: test_router.py
tests/dummy_extension/: actions.py  custom_events.py  extension.py  flows.py  schedules.py  validations.py
tests/requests/: test_request.py
(+3 files in other folders)
