[tool.poetry]
name = "connect-processors-toolkit"
version = "0.1.0"
description = "Bunch of tools to ease the development of Connect Processors."
license = "MIT"
repository = 'https://github.com/othercodes/connect-processors-toolkit'
packages = [
    { include = "connect" },
]
authors = [
    "Unay Santisteban <davidunay.santisteban@cloudblue.com>"
]
keywords = [
    'connect',
    'processors',
    'tools'
]
classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^9.8.2"
pinject = "^0.14.1"
connect-extension-runner = "^25.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
pytest-asyncio = "^0.15.1"
pytest-httpx = "^0.12.0"
coverage = { extras = ["toml"], version = "^5.3" }
connect-devops-testing-library = { git = "https://github.com/cloudblue/connect-devops-testing-library", rev = "master" }
responses = "^0.12.0"
flake8 = "~3.8"
flake8-bugbear = "~20"
flake8-cognitive-complexity = "^0.1"
flake8-commas = "~2.0"
flake8-future-import = "~0.4"
flake8-import-order = "~0.18"
flake8-broken-line = "~0.3"
flake8-comprehensions = "^3.3.1"
flake8-debugger = "^4.0.0"
flake8-eradicate = "^1.0.0"
flake8-string-format = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=connect.processors_toolkit --cov-report=term-missing:skip-covered --cov-report=html --cov-report=xml"

[tool.coverage.run]
omit = ["tests/*", "venv*/*", "setup.py"]
relative_files = true
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "import",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
skip_covered = true
